Создание заявки и получение заявки по идентификатору
