# cargo-management/api/src/main/resources/openapi.yaml
@@ -33,9 +33,7 @@ paths:
         content:
           application/json:
             schema:
-              type: array
-              items:
-                $ref: '#/components/schemas/TransportationRequest'
+              $ref: '#/components/schemas/TransportationRequest'
       responses:
         201:
           description: Заявка создана
